--- a/mdfinder/Icons.xaml
+++ b/mdfinder/Icons.xaml
@@ -170,4 +170,49 @@
             </Path>
         </Viewbox>
     </ControlTemplate>
+    <ControlTemplate x:Key="LargeFileIcon">
+        <Viewbox>
+            <Path Fill="#000000">
+                <Path.Data>
+                    <PathGeometry Figures="M22 13v-13h-20v24h8.409c4.857 0 3.335-8 3.335-8 3.009.745 8.256.419 8.256-3zm-4-7h-12v-1h12v1zm0 3h-12v-1h12v1zm0 3h-12v-1h12v1zm-2.091 6.223c2.047.478 4.805-.279 6.091-1.179-1.494 1.998-5.23 5.708-7.432 6.881 1.156-1.168 1.563-4.234 1.341-5.702z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+        </Viewbox>
+    </ControlTemplate>
+    <ControlTemplate x:Key="SmallFileIcon">
+        <Viewbox>
+            <Path Fill="#000000">
+                <Path.Data>
+                    <PathGeometry Figures="M4 22v-20h16v11.543c0 4.107-6 2.457-6 2.457s1.518 6-2.638 6h-7.362zm18-7.614v-14.386h-20v24h10.189c3.163 0 9.811-7.223 9.811-9.614zm-5-1.386h-10v-1h10v1zm0-4h-10v1h10v-1zm0-3h-10v1h10v-1z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+        </Viewbox>
+    </ControlTemplate>
+    <ControlTemplate x:Key="SelectedFileIcon">
+        <Viewbox>
+            <Path Fill="#000000">
+                <Path.Data>
+                    <PathGeometry Figures="M18.764 17.385l2.66 5.423-2.441 1.192-2.675-5.474-3.308 2.863v-12.389l10 7.675-4.236.71zm2.236-7.385h2v-4h-2v4zm0 2.619l2 1.535v-2.154h-2v.619zm-10 8.77v-1.389h-4v2h4v-.611zm-8-3.389h-2v4h4v-2h-2v-2zm-2-14h2v-2h2v-2h-4v4zm2 8h-2v4h2v-4zm8-12h-4v2h4v-2zm6 0h-4v2h4v-2zm4 4h2v-4h-4v2h2v2zm-18 2h-2v4h2v-4z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+        </Viewbox>
+    </ControlTemplate>
+    <ControlTemplate x:Key="OpenFileIcon">
+        <Viewbox>
+            <Path Fill="#000000">
+                <Path.Data>
+                    <PathGeometry Figures="M6 17c2.269-9.881 11-11.667 11-11.667v-3.333l7 6.637-7 6.696v-3.333s-6.17-.171-11 5zm12 .145v2.855h-16v-12h6.598c.768-.787 1.561-1.449 2.339-2h-10.937v16h20v-6.769l-2 1.914z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+        </Viewbox>
+    </ControlTemplate>
+    <ControlTemplate x:Key="NoPreviewIcon">
+        <Viewbox>
+            <Path Fill="#000000">
+                <Path.Data>
+                    <PathGeometry Figures="M19.604 2.562l-3.346 3.137c-1.27-.428-2.686-.699-4.243-.699-7.569 0-12.015 6.551-12.015 6.551s1.928 2.951 5.146 5.138l-2.911 2.909 1.414 1.414 17.37-17.035-1.415-1.415zm-6.016 5.779c-3.288-1.453-6.681 1.908-5.265 5.206l-1.726 1.707c-1.814-1.16-3.225-2.65-4.06-3.66 1.493-1.648 4.817-4.594 9.478-4.594.927 0 1.796.119 2.61.315l-1.037 1.026zm-2.883 7.431l5.09-4.993c1.017 3.111-2.003 6.067-5.09 4.993zm13.295-4.221s-4.252 7.449-11.985 7.449c-1.379 0-2.662-.291-3.851-.737l1.614-1.583c.715.193 1.458.32 2.237.32 4.791 0 8.104-3.527 9.504-5.364-.729-.822-1.956-1.99-3.587-2.952l1.489-1.46c2.982 1.9 4.579 4.327 4.579 4.327z" FillRule="NonZero"/>
+                </Path.Data>
+            </Path>
+        </Viewbox>
+    </ControlTemplate>
 </ResourceDictionary>
